--- a/sale_qweb/reports/sale_report_template.xml
+++ b/sale_qweb/reports/sale_report_template.xml
@@ -5,6 +5,50 @@
         <t t-call="web.external_layout">
             <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)" />
             <div class="page">
+                <div class="oe_structure"/>
+                <h2 class="mt16">
+                    <t t-if="not (env.context.get('proforma', False) or is_pro_forma)">
+                        <span t-if="doc.state not in ['draft','sent']">Order # </span>
+                        <span t-if="doc.state in ['draft','sent']">Quotation # </span>
+                    </t>
+                    <t t-if="env.context.get('proforma', False) or is_pro_forma">
+                        <span>Pro-Forma Invoice # </span>
+                    </t>
+                    <span t-field="doc.name"/>
+                </h2>
+
+                <div class="row mt32 mb32" id="informations">
+                    <div t-if="doc.client_order_ref" class="col-auto mw-100 mb-2">
+                        <strong>Your Reference:</strong>
+                        <p class="m-0" t-field="doc.client_order_ref"/>
+                    </div>
+                    <div t-if="doc.date_order and doc.state not in ['draft','sent']" class="col-auto mw-100 mb-2">
+                        <strong>Order Date:</strong>
+                        <p class="m-0" t-field="doc.date_order"/>
+                    </div>
+                    <div t-if="doc.date_order and doc.state in ['draft','sent']" class="col-auto mw-100 mb-2">
+                        <strong>Quotation Date:</strong>
+                        <p class="m-0" t-field="doc.date_order" t-options='{"widget": "date"}'/>
+                    </div>
+                    <div t-if="doc.validity_date and doc.state in ['draft', 'sent']" class="col-auto mw-100 mb-2" name="expiration_date">
+                        <strong>Expiration:</strong>
+                        <p class="m-0" t-field="doc.validity_date"/>
+                    </div>
+                    <div t-if="doc.user_id.name" class="col-auto mw-100 mb-2">
+                        <strong>Salesperson:</strong>
+                        <p class="m-0" t-field="doc.user_id"/>
+                    </div>
+                </div>
+
+                <div class="row address">
+                    <div class="col-5">
+                        <div t-field="doc.partner_id" t-options-widget="'contact'" />
+                    </div>
+                    <div class="col-5 offset-2" />
+                </div>
+                <br></br>
+                <br></br>
+                <br></br>
                 <div class="row">
                     <div class="col">
                         <t t-raw="doc.qweb_presentation" />
@@ -40,105 +84,129 @@
                         <span t-field="doc.qweb_wbs" />
                     </div>
                 </div>
-                <img class="img-fluid" src="/web/image/3554/welcome%20to%20breeze.PNG" />
-                <attribute name="style" separator=";" add="margin-left:10px" />
-                <div class="row address">
-                    <div class="col-5">
-                        <div t-field="doc.partner_id" t-options-widget="'contact'" />
-                    </div>
-                    <div class="col-5 offset-2" />
-                </div>
+                <br></br>
+                <br></br>
+                <br></br>
                 <div class="row">
-                    <div class="col-5" />
-                    <div class="col-5 offset-2">
-                        <table class="table table-sm o_report_block_total">
-                            <t t-set="total_currency_id" t-value="doc.pricelist_id.currency_id" />
-                            <t t-set="total_amount_total" t-value="doc.amount_total" />
-                            <t t-set="total_amount_untaxed" t-value="doc.amount_untaxed" />
-                            <t t-set="total_amount_by_groups" t-value="doc.amount_by_group" />
-                            <tr class="border-black o_subtotal">
-                                <td>
-                                    <strong>Subtotal</strong>
-                                </td>
-                                <td class="text-right">
-                                    <span t-esc="total_amount_untaxed" t-options="{'widget': 'monetary', 'display_currency': total_currency_id}" />
-                                </td>
+                    <table class="table table-sm o_main_table">
+                        <thead>
+                            <tr>
+                                <th name="th_description" class="text-left">Description</th>
+                                <th name="th_quantity" class="text-right">Quantity</th>
+                                <th name="th_priceunit" class="text-right">Unit Price</th>
+                                <th name="th_discount" t-if="display_discount" class="text-right" groups="product.group_discount_per_so_line">
+                                    <span>Disc.%</span>
+                                </th>
+                                <th name="th_taxes" class="text-right">Taxes</th>
+                                <th name="th_subtotal" class="text-right">
+                                    <t groups="account.group_show_line_subtotals_tax_excluded">Amount</t>
+                                    <t groups="account.group_show_line_subtotals_tax_included">Total Price</t>
+                                </th>
                             </tr>
-                            <t t-foreach="total_amount_by_groups" t-as="total_amount_by_group">
-                                <tr>
-                                    <t t-if="len(total_amount_by_group) == 1 and total_amount_untaxed == total_amount_by_group[2]">
-                                        <td>
-                                            <span t-esc="total_amount_by_group[0]" />
+                        </thead>
+                        <tbody class="sale_tbody">
+        
+                            <t t-set="current_subtotal" t-value="0"/>
+        
+                            <t t-foreach="doc.order_line" t-as="line">
+        
+                                <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
+                                <t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
+        
+                                <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line.display_type == 'line_section' else 'font-italic o_line_note' if line.display_type == 'line_note' else ''">
+                                    <t t-if="not line.display_type">
+                                        <td name="td_name"><span t-field="line.name"/></td>
+                                        <td name="td_quantity" class="text-right">
+                                            <span t-field="line.product_uom_qty"/>
+                                            <span t-field="line.product_uom" groups="uom.group_uom"/>
                                         </td>
-                                        <td class="text-right o_price_total">
-                                            <span t-esc="total_amount_by_group[3]" />
+                                        <td name="td_priceunit" class="text-right">
+                                            <span t-field="line.price_unit"/>
+                                        </td>
+                                        <td t-if="display_discount" class="text-right" groups="product.group_discount_per_so_line">
+                                            <span t-field="line.discount"/>
+                                        </td>
+                                        <td name="td_taxes" class="text-right">
+                                            <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.tax_id))"/>
+                                        </td>
+                                        <td name="td_subtotal" class="text-right o_price_total">
+                                            <span t-field="line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
+                                            <span t-field="line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
                                         </td>
                                     </t>
-                                    <t t-else="">
-                                        <td>
-                                            <span t-esc="total_amount_by_group[0]" />
-                                            <span>
-                                                <span>on</span>
-                                                <t t-esc="total_amount_by_group[4]" />
-                                            </span>
+                                    <t t-if="line.display_type == 'line_section'">
+                                        <td name="td_section_line" colspan="99">
+                                            <span t-field="line.name"/>
                                         </td>
-                                        <td class="text-right o_price_total">
-                                            <span t-esc="total_amount_by_group[3]" />
+                                        <t t-set="current_section" t-value="line"/>
+                                        <t t-set="current_subtotal" t-value="0"/>
+                                    </t>
+                                    <t t-if="line.display_type == 'line_note'">
+                                        <td name="td_note_line" colspan="99">
+                                            <span t-field="line.name"/>
                                         </td>
                                     </t>
                                 </tr>
+        
+                                <t t-if="current_section and (line_last or doc.order_line[line_index+1].display_type == 'line_section')">
+                                    <tr class="is-subtotal text-right">
+                                        <td name="td_section_subtotal" colspan="99">
+                                            <strong class="mr16">Subtotal</strong>
+                                            <span
+                                                t-esc="current_subtotal"
+                                                t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'
+                                            />
+                                        </td>
+                                    </tr>
+                                </t>
                             </t>
-                            <t t-if="total_amount_by_groups is None">
-                                <tr>
-                                    <td>Taxes</td>
-                                    <td class="text-right">
-                                        <span t-esc="total_amount_total - total_amount_untaxed" t-options="{'widget': 'monetary', 'display_currency': total_currency_id}" />
+                        </tbody>
+                    </table>
+                </div>
+    
+                <div class="clearfix" name="so_total_summary">
+                    <div id="total" class="row" name="total">
+                        <div t-attf-class="#{'col-4' if report_type != 'html' else 'col-sm-7 col-md-5'} ml-auto">
+                            <table class="table table-sm">
+                                <tr class="border-black o_subtotal" style="">
+                                    <td name="td_amount_untaxed_label"><strong>Subtotal</strong></td>
+                                    <td name="td_amount_untaxed" class="text-right">
+                                        <span t-field="doc.amount_untaxed"/>
                                     </td>
                                 </tr>
-                            </t>
-                            <tr class="border-black o_total">
-                                <td>
-                                    <strong>Total</strong>
-                                </td>
-                                <td class="text-right">
-                                    <span t-esc="total_amount_total" t-options="{'widget': 'monetary', 'display_currency': total_currency_id}" />
-                                </td>
-                            </tr>
-                        </table>
+                                <t t-foreach="doc.amount_by_group" t-as="amount_by_group">
+                                    <tr style="">
+                                        <t t-if="amount_by_group[5] == 1 and doc.amount_untaxed == amount_by_group[2]">
+                                            <td name="td_amount_by_group_label_3">
+                                                <span t-esc="amount_by_group[0]"/>
+                                                <span>&amp;nbsp;<span>on</span>&amp;nbsp;<t t-esc="amount_by_group[2]" t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'/></span>
+                                            </td>
+                                            <td name="td_amount_by_group_3" class="text-right o_price_total">
+                                                <span t-esc="amount_by_group[1]"
+                                                    t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'/>
+                                            </td>
+                                        </t>
+                                        <t t-else ="">
+                                            <td name="td_amount_by_group_label">
+                                                <span t-esc="amount_by_group[0]"/>
+                                            </td>
+                                            <td name="td_amount_by_group" class="text-right o_price_total">
+                                                <span t-esc="amount_by_group[1]"
+                                                    t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'/>
+                                            </td>
+                                        </t>
+                                    </tr>
+                                </t>
+                                <tr class="border-black o_total">
+                                    <td name="td_amount_total_label"><strong>Total</strong></td>
+                                    <td name="td_amount_total" class="text-right">
+                                        <span t-field="doc.amount_total"/>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
-                <table class="table o_report_block_table">
-                    <thead>
-                        <tr>
-                            <th>
-                                <span>Name</span>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr t-foreach="doc.sale_order_option_ids" t-as="table_line">
-                            <td>
-                                <span t-field="table_line.display_name" />
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <table class="table o_report_block_table">
-                    <thead>
-                        <tr>
-                            <th>
-                                <span>Name</span>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr t-foreach="docs" t-as="table_line">
-                            <td>
-                                <span t-field="table_line.display_name" />
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
             </div>  
         </t>
     </template>
