--- a/crm_helpdesk_ticket/views/crm_views.xml
+++ b/crm_helpdesk_ticket/views/crm_views.xml
@@ -22,5 +22,18 @@
                 </xpath>
             </field>
         </record>
+
+        <record id="crm_oppertunity_inherit_tree_view" model="ir.ui.view">
+            <field name="name">crm.lead.inherit.tree.view</field>
+            <field name="model">crm.lead</field>
+            <field name="inherit_id" ref="crm.crm_case_tree_view_oppor"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='date_deadline']" position="attributes">
+                    <attribute name="invisible">0</attribute>
+                    <attribute name="optional">show</attribute>
+                </xpath>
+            </field>
+        </record>
+
     </data>
 </odoo>
