[ADD]sale_order_exchange_rate

--- a/sale_order_exchange_rate/views/account_move.xml
+++ b/sale_order_exchange_rate/views/account_move.xml
@@ -27,8 +27,8 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='currency_id']" position="before">
-                <field name="currency_rate_raw" groups="base.group_multi_currency"/>
-                <field name="sale_order_id" invisible="True"/>
+                <field name="currency_rate_raw" groups="base.group_multi_currency" readonly="True" force_save="True"/>
+                <field name="sale_order_id" invisible="True" force_save="True"/>
                 <field name="invoice_has_exchange_rate" groups="base.group_multi_currency"
                         attrs="{'readonly': [('sale_order_id','!=', False)], 'invisible': [('type', 'not in', ('out_invoice', 'out_refund', 'in_invoice', 'in_refund'))]}"/>
                 <field name="invoice_exchange_rate" groups="base.group_multi_currency"
@@ -36,7 +36,7 @@
             </xpath>
             <xpath expr="//field[@name='amount_total']" position="after">
                 <field name="amount_total_exchange_rate" groups="base.group_multi_currency"
-                    attr="{'invisible': [('invoice_exchange_allow_ok', '=', 'False')]"/>
+                    attr="{'invisible': ['|',('invoice_exchange_allow_ok', '=', 'False'),('sale_order_id','!=',False)]"/>
             </xpath>
             <xpath expr="//page[@id='aml_tab']/field/tree/field[@name='analytic_account_id']" position="replace">
                 <field name="analytic_account_id" optional="show" domain="['|', ('company_id', '=', parent.company_id), ('company_id', '=', False)]" groups="analytic.group_analytic_accounting" attrs="{'invisible': [('display_type', 'in', ('line_section', 'line_note'))]}"/>
