--- a/crm_helpdesk_ticket/views/crm_views.xml
+++ b/crm_helpdesk_ticket/views/crm_views.xml
@@ -28,9 +28,8 @@
             <field name="model">crm.lead</field>
             <field name="inherit_id" ref="crm.crm_case_tree_view_oppor"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='date_deadline']" position="attributes">
-                    <attribute name="invisible">0</attribute>
-                    <attribute name="optional">show</attribute>
+                <xpath expr="//field[@name='create_date']" position="after">
+                    <field name="date_closed" optional="show"/>
                 </xpath>
             </field>
         </record>
